Added string encryption/decryption, simplified fast exponentiation